# cache-chroniclemap

./: .gitignore  BUILD  LICENSE  MODULE.bazel  README.md  cache-chroniclemap_plugin_deps.lock.json  cache-chroniclemap_third_party_runtime_jars.allowlist.txt  external_plugin_deps.MODULE.bazel  groups  project.config
src/main/java/com/gerritforge/gerrit/modules/cache/chroniclemap/: AdministerCachePermission.java  AdministerCachesCapability.java  AnalyzeH2Caches.java  AutoAdjustCaches.java  AutoAdjustCachesCommand.java  AutoAdjustCachesServlet.java  CacheKeysIndex.java  CacheNameSanitizer.java  CacheSerializers.java  CachesWithoutChronicleMapConfigMetric.java  CapabilityModule.java  ChronicleMapCacheConfig.java  ChronicleMapCacheDefProxy.java  ChronicleMapCacheFactory.java  ChronicleMapCacheImpl.java  ChronicleMapCacheLoader.java  ChronicleMapCacheModule.java  ChronicleMapCompatAliases.java  ChronicleMapDir.java  ChronicleMapStore.java  ChronicleMapStoreMetrics.java  DefaultConfig.java  H2AggregateData.java  H2CacheCommand.java  H2MigrationServlet.java  HttpModule.java  HttpServletOps.java  InMemoryCache.java  InMemoryCacheLoadingFromStoreImpl.java  KeyWrapper.java  KeyWrapperMarshaller.java  SSHCommandModule.java  SerializationMetricsForCache.java  TimedValue.java  TimedValueMarshaller.java
src/main/java/com/googlesource/gerrit/modules/cache/chroniclemap/: ChronicleMapCacheConfig.java
src/main/resources/Documentation/: build.md
src/test/java/com/gerritforge/gerrit/modules/cache/chroniclemap/: AnalyzeH2CachesIT.java  AutoAdjustCachesIT.java  CacheKeysIndexTest.java  CacheNameSanitizerTest.java  ChronicleMapCacheConfigDefaultsIT.java  ChronicleMapCacheConfigTest.java  ChronicleMapCacheExtendedIT.java  ChronicleMapCacheIT.java  ChronicleMapCompatAliasesTest.java  KeyWrapperMarshallerTest.java  MigrateH2CachesInMemoryIT.java  MigrateH2CachesLocalDiskIT.java  TestPersistentCacheDef.java  TimedValueMarshallerTest.java
src/test/java/com/googlesource/gerrit/modules/cache/chroniclemap/: TimedValueMarshallerTest.java
