module(name = "gerrit-cache-chroniclemap")

bazel_dep(name = "rules_java", version = "9.3.0")
bazel_dep(name = "rules_jvm_external", version = "7.0")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")

# Chronicle artifacts are aligned to the chronicle-bom 2026.2 BOM:
# https://repo1.maven.org/maven2/net/openhft/chronicle-bom/2026.2/chronicle-bom-2026.2.pom
CHRONICLE_MAP_VER = "2026.0"

CHRONICLE_CORE_VER = "2026.2"

CHRONICLE_WIRE_VER = "2026.2"

CHRONICLE_BYTES_VER = "2026.2"

CHRONICLE_ALGORITHMS_VER = "2026.2"

CHRONICLE_VALUES_VER = "2026.2"

CHRONICLE_THREADS_VER = "2026.2"

CHRONICLE_COMPILER_VER = "2026.2"

CHRONICLE_AFFINITY_VER = "2026.2"

CHRONICLE_POSIX_VER = "2026.2"

JNA_VER = "5.5.0"

maven.install(
    name = "cache-chroniclemap_plugin_deps",
    artifacts = [
        "com.squareup:javapoet:1.13.0",
        "net.java.dev.jna:jna:" + JNA_VER,
        "net.java.dev.jna:jna-platform:" + JNA_VER,
        "net.openhft:affinity:" + CHRONICLE_AFFINITY_VER,
        "net.openhft:chronicle-algorithms:" + CHRONICLE_ALGORITHMS_VER,
        "net.openhft:chronicle-bytes:" + CHRONICLE_BYTES_VER,
        "net.openhft:chronicle-core:" + CHRONICLE_CORE_VER,
        "net.openhft:chronicle-map:" + CHRONICLE_MAP_VER,
        "net.openhft:chronicle-threads:" + CHRONICLE_THREADS_VER,
        "net.openhft:chronicle-values:" + CHRONICLE_VALUES_VER,
        "net.openhft:chronicle-wire:" + CHRONICLE_WIRE_VER,
        "net.openhft:compiler:" + CHRONICLE_COMPILER_VER,
        "net.openhft:posix:" + CHRONICLE_POSIX_VER,
        # chronicle's parent POM marks this `provided`, so rules_jvm_external
        # filters it out of transitive resolution. Pin explicitly: chronicle-
        # values invokes javac at runtime to generate value-type subclasses and
        # needs the annotation classes on the plugin classpath to complete
        # symbol resolution on inherited @NotNull/@Nullable signatures
        # (Java 25's javac is strict; Java 21 tolerated the missing symbol).
        "org.jetbrains:annotations:24.1.0",
    ],
    duplicate_version_warning = "error",
    excluded_artifacts = [
        "org.ow2.asm:asm",
        "org.slf4j:slf4j-api",
    ],
    fail_if_repin_required = True,
    fail_on_missing_checksum = True,
    fetch_sources = True,
    lock_file = "//:cache-chroniclemap_plugin_deps.lock.json",
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
    version_conflict_policy = "pinned",
)
use_repo(maven, "cache-chroniclemap_plugin_deps")
