module(name = "gerrit-cache-chroniclemap")

bazel_dep(name = "rules_java", version = "9.3.0")
bazel_dep(name = "rules_jvm_external", version = "7.0")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")

# Chronicle artifacts are aligned to the chronicle-bom 2026.2 BOM:
# https://repo1.maven.org/maven2/net/openhft/chronicle-bom/2026.2/chronicle-bom-2026.2.pom
CHRONICLE_MAP_VER = "2026.0"

CHRONICLE_CORE_VER = "2026.2"

CHRONICLE_WIRE_VER = "2026.2"

CHRONICLE_BYTES_VER = "2026.2"

CHRONICLE_ALGORITHMS_VER = "2026.2"

CHRONICLE_THREADS_VER = "2026.2"

CHRONICLE_COMPILER_VER = "2026.2"

CHRONICLE_AFFINITY_VER = "2026.2"

CHRONICLE_POSIX_VER = "2026.2"

JNA_VER = "5.5.0"

maven.install(
    name = "cache-chroniclemap_plugin_deps",
    artifacts = [
        # JitPack-built fork of chronicle-values 2026.2 carrying the JDK 25 fix
        # from OpenHFT/Chronicle-Values#178 (preload jetbrains annotations in
        # MyJavaFileManager). Same Maven coordinates and class graph as upstream
        # chronicle-values 2026.2 -- chronicle-map's transitive reference to
        # net.openhft:chronicle-values is satisfied by the contents of this JAR
        # at runtime; we exclude the upstream coordinate below to avoid
        # duplicate-class shadowing.
        # TODO(davido): Switch back to net.openhft:chronicle-values:<next> when
        # #178 merges upstream and ships in a Chronicle release.
        "com.github.davido:Chronicle-Values:c931bace3c",
        "com.squareup:javapoet:1.13.0",
        "net.java.dev.jna:jna:" + JNA_VER,
        "net.java.dev.jna:jna-platform:" + JNA_VER,
        "net.openhft:affinity:" + CHRONICLE_AFFINITY_VER,
        "net.openhft:chronicle-algorithms:" + CHRONICLE_ALGORITHMS_VER,
        "net.openhft:chronicle-bytes:" + CHRONICLE_BYTES_VER,
        "net.openhft:chronicle-core:" + CHRONICLE_CORE_VER,
        "net.openhft:chronicle-map:" + CHRONICLE_MAP_VER,
        "net.openhft:chronicle-threads:" + CHRONICLE_THREADS_VER,
        "net.openhft:chronicle-wire:" + CHRONICLE_WIRE_VER,
        "net.openhft:posix:" + CHRONICLE_POSIX_VER,
    ],
    duplicate_version_warning = "error",
    excluded_artifacts = [
        # Suppress transitive resolution of upstream chronicle-values pulled in
        # by chronicle-map's POM; the JitPack-built fork above provides the same
        # net.openhft.chronicle.values.* classes plus the JDK 25 fix.
        "net.openhft:chronicle-values",
        "org.ow2.asm:asm",
        "org.slf4j:slf4j-api",
    ],
    fail_if_repin_required = True,
    fail_on_missing_checksum = True,
    fetch_sources = True,
    lock_file = "//:cache-chroniclemap_plugin_deps.lock.json",
    repositories = [
        "https://repo1.maven.org/maven2",
        "https://jitpack.io",
    ],
    version_conflict_policy = "pinned",
)
use_repo(maven, "cache-chroniclemap_plugin_deps")
